# xas-xps-analyst

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: BACKEND_CONTRACT.md  USAGE.md  delivery_manifest.json
example-output/: api_contract_validation.json  codex_response.json  file_manifest.json  file_manifest.md  limitations.md  next_steps.md  qc.json  qc.md  results.json  summary.md  xps_backend_fit_results.json  xps_backend_fit_results.md  xps_backend_probe.json  xps_backend_probe.md  xps_evidence_table.json  xps_evidence_table.md  xps_fitting_handoff.json  xps_fitting_handoff.md  xps_peak_fits.json  xps_peak_fits.md  xps_reference_assignments.json  xps_reference_assignments.md  xps_reference_gaps.json  xps_reference_gaps.md
example-output/parsed/: xas_records.csv  xps_records.csv
examples/: codex_backend_request.example.json
src/xas_xps_agent/: __init__.py  codex_backend_agent.py  probe_khervefitting_backend.py  run_xas_xps_agent.py
